# grun

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml
contracts/: CarbonCredit.sol
docs/: deployment.md
frontend/: Dockerfile  Dockerfile.frontend  hardhat.config.ts  package.json  tsconfig.json  tsconfig.node.json
frontend/src/: App.tsx  index.tsx
frontend/src/components/auth/: EmailVerification.tsx  LoginForm.tsx  PasswordReset.tsx  RegisterForm.tsx  TwoFactorSetup.tsx  TwoFactorVerification.tsx
frontend/src/components/common/: ConfirmationDialog.tsx  DataTable.tsx  EmptyState.tsx  ErrorFallback.tsx  Form.tsx  LoadingButton.tsx  LoadingScreen.tsx  NotFoundPage.tsx  ToastContainer.tsx
frontend/src/components/dashboard/: AdminDashboard.tsx  BuyerDashboard.tsx  SellerDashboard.tsx
frontend/src/config/: index.ts
frontend/src/contexts/: Web3Context.tsx
frontend/src/hooks/: useAuth.ts  useToast.tsx
frontend/src/services/: authService.ts  web3Service.ts
frontend/src/store/: index.ts
frontend/src/theme/: index.ts
frontend/src/types/: index.ts
frontend/src/utils/: errorHandling.ts
grun/api/: admin.py  exceptions.py  models.py  permissions.py  serializers.py  storage.py  tasks.py  urls.py  views.py
grun/api/blockchain/: web3_handler.py
grun/api/services/: payment_service.py
grun/api/views/: payment_views.py
grun/core/: settings.py  urls.py
scripts/: deploy-polygon.ts  deploy.ts  init-dev.sh  seed_data.py
test/: CarbonCredit.test.ts
(+16 files in other folders)
